--- a/noonno/html/products/products_detail.html
+++ b/noonno/html/products/products_detail.html
@@ -245,7 +245,7 @@
         </div>
         <div class="list_content">
             <!-- 제품소개 -->
-            <div class="tab_cont  on">
+            <div class="tab_cont">
               <div class="dt-info-wrap">
                 <div class="dt-info-intro">
                   <img src="../../resource/img/products_detail/dt_img01.png" alt="">
