한눈에보기02 fild position

--- a/noonno/html/products/products_map.html
+++ b/noonno/html/products/products_map.html
@@ -140,13 +140,13 @@
                 <div class="mp-table-tit-right">
                   <p class="tit-age"><span>학습연령</span></p>
                   <ul id="age-select-sort">
-                    <li><button>영유아</button></li>
-                    <li><button>유아</button></li>
-                    <li><button>초등1-3</button></li>
-                    <li><button>초등4-6</button></li>
-                    <li><button>중등</button></li>
-                    <li><button>고등</button></li>
-                    <li><button>성인</button></li>
+                    <li class="type1"><button>영유아</button></li>
+                    <li class="type2"><button>유아</button></li>
+                    <li class="type3"><button>초등1-3</button></li>
+                    <li class="type4"><button>초등4-6</button></li>
+                    <li class="type5"><button>중등</button></li>
+                    <li class="type6"><button>고등</button></li>
+                    <li class="type7"><button>성인</button></li>
                   </ul>
                 </div>
               </div>
@@ -160,32 +160,32 @@
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2">
+                      <div class="gr-width gr-w-col2" data-startpos="0" data-overpos="">
                         <button class="color-yellow">눈높이한글똑똑</button>
                       </div>
                     </li> 
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4">
+                      <div class="gr-width gr-w-col4" data-startpos="1">
                         <button class="color-green">눈높이국어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col1-over-1_5">
+                      <div class="gr-width gr-w-col1-over-1_5" data-startpos="2">
                         <button class="color-green">눈높이영역국어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2">
+                      <div class="gr-width gr-w-col2" data-startpos="3">
                         <button class="color-green">눈높이스쿨국어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4">
+                      <div class="gr-width gr-w-col4" data-startpos="0">
                         <button class="color-green">눈높이창의독서</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col1-over-1_1">
+                      <div class="gr-width gr-w-col1-over-1_1" data-startpos="1">
                         <button class="color-green">써밋스코어국어</button>
                       </div>
                     </li>
@@ -211,37 +211,37 @@
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-normal">
+                      <div class="gr-width gr-w-normal" data-startpos="0">
                         <button class="color-yellow">눈높이놀이똑똑</button>
                       </div>
                     </li> 
                     <li class="gr-line">
-                      <div class="gr-width gr-w-normal">
+                      <div class="gr-width gr-w-normal" data-startpos="1">
                         <button class="color-yellow">눈높이수학똑똑</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="1">
                         <button class="color-red">눈높이수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4">
+                      <div class="gr-width gr-w-col4" data-startpos="1">
                         <button class="color-red">눈높이사고력수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2">
+                      <div class="gr-width gr-w-col2" data-startpos="2">
                         <button class="color-red">눈높이스쿨수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2">
+                      <div class="gr-width gr-w-col2" data-startpos="2">
                         <button class="color-red">써밋스피드수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4">
+                      <div class="gr-width gr-w-col4" data-startpos="2">
                         <button class="color-red">써밋스코어수학</button>
                       </div>
                     </li>
@@ -267,62 +267,62 @@
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-normal">
+                      <div class="gr-width gr-w-normal"  data-startpos="1">
                         <button class="color-yellow">눈높이영어똑똑</button>
                       </div>
                     </li> 
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="2">
                         <button class="color-blue">눈높이영어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="2">
                         <button class="color-blue">I Listening</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="2">
                         <button class="color-blue">I Grammer</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="2">
                         <button class="color-blue">Happy Talk</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="2">
                         <button class="color-blue">눈높이일본어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="2">
                         <button class="color-blue">대교 전화영어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="2">
                         <button class="color-blue">대교 전화일본어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="2">
                         <button class="color-blue">대교 화상영어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col6">
+                      <div class="gr-width gr-w-col6" data-startpos="1">
                         <button class="color-blue">톡앤큐화상영어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="2">
                         <button class="color-blue">데일리잉글리시</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2">
+                      <div class="gr-width gr-w-col2" data-startpos="2">
                         <button class="color-blue">써밋스피킹</button>
                       </div>
                     </li>
@@ -348,7 +348,7 @@
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col3">
+                      <div class="gr-width gr-w-col3"  data-startpos="2">
                         <button class="color-red">눈높이과학플러스온</button>
                       </div>
                     </li> 
@@ -374,17 +374,17 @@
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-normal">
+                      <div class="gr-width gr-w-normal"  data-startpos="4">
                         <button class="color-green">눈높이중등사회·역사</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2">
+                      <div class="gr-width gr-w-col2"  data-startpos="2">
                         <button class="color-green">눈높이한국사</button>
                       </div>
                     </li> 
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2">
+                      <div class="gr-width gr-w-col2"  data-startpos="2">
                         <button class="color-green">눈높이사회플러스온</button>
                       </div>
                     </li>
@@ -410,17 +410,17 @@
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-normal">
+                      <div class="gr-width gr-w-normal" data-startpos="1">
                         <button class="color-yellow">눈높이한자똑똑</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col6">
+                      <div class="gr-width gr-w-col6" data-startpos="1">
                         <button class="color-green">눈높이한자</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5">
+                      <div class="gr-width gr-w-col5" data-startpos="0">
                         <button class="color-red">눈높이아티맘</button>
                       </div>
                     </li>
@@ -446,22 +446,22 @@
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2">
+                      <div class="gr-width gr-w-col2" data-startpos="2">
                         <button class="color-red">써밋스피드수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4">
+                      <div class="gr-width gr-w-col4" data-startpos="1">
                         <button class="color-red">써밋스코어수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col1-over-1_1">
+                      <div class="gr-width gr-w-col1-over-1_1" data-startpos="2">
                         <button class="color-green">써밋스코어국어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2">
+                      <div class="gr-width gr-w-col2" data-startpos="2">
                         <button class="color-blue">써밋스피킹</button>
                       </div>
                     </li>
